[K4.0] Crypsis: Fix respsonsive on new topic

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -789,10 +789,15 @@ ul.inline i {
 }
 
 #search [class*='span'] {
-	margin-left: 6px !important;
+	margin-left: 6px;
 }
 
 div.pagination a.disabled,
 div.pagination a.disabled:hover {
 	color: #999999;
+}
+
+.label,
+.badge {
+	white-space: normal;
 }
