[K4.0] Crypsis: Avatars css

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -677,10 +677,6 @@ small.text-muted {
 	padding-top : 20px;
 }
 
-.media {
-	padding-right : 10px;
-}
-
 #status-form label.btn a.btn {
 	padding : 0 0 0 5px;
 }
@@ -800,4 +796,8 @@ div.pagination a.disabled:hover {
 .label,
 .badge {
 	white-space: normal;
+}
+
+.container-fluid {
+	padding: 0;
 }
