[K4.0] Crypsis : with minimized browser windows you can't open the menus #2994

--- a/components/com_kunena/site/template/crypsis/less/mediaqueries.less
+++ b/components/com_kunena/site/template/crypsis/less/mediaqueries.less
@@ -17,7 +17,7 @@
 
 /* Smartphones */
 @media (max-width: 480px) {
-	.pagination .test ul > li > a, .pagination ul > li > span {
+	.pagination  ul > li > a, .pagination ul > li > span {
 		display: none;
 	}
 
@@ -85,6 +85,10 @@
 	.modal {
 		position: static;
 	}
+
+	ul.breadcrumb {
+		display:none;
+	}
 }
 
 /* Smartphones to Tablets */
@@ -105,6 +109,7 @@
 
 	.navbar .nav {
 		width: 100%;
+		padding-top: 10px;
 	}
 
 	.controls {
