[K4.0] Crypsis responsive editor - size and color tables are in the background #2996

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -375,6 +375,10 @@ table.kpostbuttonset {
 	*margin-left  : .3em;
 }
 
+li.markItUpButton ul {
+	z-index: 1;
+}
+
 .dropzone .message {
 	opacity    : 1;
 	-ms-filter : none;
