[K4.0] Crypsis - Add class="krow(Number)-stickymsg" to Sticky posts #2515

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -615,12 +615,12 @@ div.kmsg > li {
 	border-bottom-color : #BFC3C6;
 }
 
-.krow1-stickymsg {
-	background-color : #FFFFCC;
+.krow1-stickymsg:nth-child(odd) {
+	background-color : #F2F1EE;
 }
 
-.krow2-stickymsg {
-	background-color : #FFFFCC;
+.krow1-stickymsg:nth-child(even){
+	background-color : #FFFFFF;
 }
 
 #logout-form {
