[K4.0] Crypsis: custom.less should be loaded last (otherwise she will overwritten again) #3037

--- a/components/com_kunena/site/template/crypsis/less/user.less
+++ b/components/com_kunena/site/template/crypsis/less/user.less
@@ -9,26 +9,26 @@
 
 
 .kwho-guest {
-	color: #666666 !important;
+	color: #666666;
 }
 
 .kwho-user {
-	color: #5388B4 !important;
+	color: #5388B4;
 }
 
 .kwho-moderator {
-	color: #0000FF !important;
+	color: #0000FF;
 }
 
 .kwho-globalmoderator {
-	color: #800000 !important;
+	color: #800000;
 }
 
 .kwho-admin {
-	color: #FF0000 !important;
+	color: #FF0000;
 }
 
 .kwho-blocked,
 .kwho-banned {
-	color: #A39D49 !important;
+	color: #A39D49;
 }
