[K4.0] Crypsis: move hack to queries

--- a/components/com_kunena/site/template/crypsis/less/mediaqueries.less
+++ b/components/com_kunena/site/template/crypsis/less/mediaqueries.less
@@ -244,3 +244,10 @@
 @media (min-width: 1200px) {
 
 }
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+	label img {
+		pointer-events : none;
+	}
+}
+
