[K4.0] Search: fix highlight search results #3090
- [x] Highlight search words: Blue Eagle
- [ ] Highlight search words: Crypsis

--- a/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
@@ -1102,3 +1102,7 @@ ul.autocompleter-choices li {
 	max-width: none !important;
 }
 /* --------------------------------------------------------------- */
+
+#Kunena .searchword {
+	background-color: yellow;
+}
