--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -810,6 +810,11 @@ div.pagination a.disabled:hover {
 .knav-collapse > .nav {
 	display:none
 }
+
 .knav-collapse.collapse.in > .nav {
 	display: inline-block;
+}
+
+.searchword {
+	background-color: yellow;
 }
