Update blue eagle css

--- a/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
@@ -658,6 +658,9 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 	background-color: #CCCCCC !important;
 }
 
+#Kunena .kmoved td {
+	background-color: #CCCCCC !important;
+}
 
 /* User info on posts
 ----------------------------------------*/
