Update Crypsisb3 and add less

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -843,3 +843,10 @@ div.pagination a.disabled:hover {
 .filter-time {
 	padding-top: 15px;
 }
+
+.moved,
+.unapproved,
+.category-stickymsg,
+.deleted {
+	background-color: rgba(0, 0, 0, 0.05);
+}
