--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -941,3 +941,10 @@ label.radio {
 textarea {
 	width: 100%;
 }
+
+.moved,
+.unapproved,
+.category-stickymsg,
+.deleted {
+	background-color: rgba(0, 0, 0, 0.05);
+}
