Crypsis: Add approve color on message

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -845,8 +845,10 @@ div.pagination a.disabled:hover {
 }
 
 .moved,
+.message-unapproved .badger-left,
 .unapproved,
 .category-stickymsg,
 .deleted {
 	background-color: rgba(0, 0, 0, 0.05);
 }
+
