Cypsisb3: Update html

--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -214,10 +214,6 @@ ul li {
 	list-style : none;
 }
 
-.topictitle {
-	font-size : 110%;
-}
-
 .viewsnum,
 .repliesnum {
 	font-size : 110%;
@@ -348,9 +344,9 @@ div.kmsgtext-confidential {
 	tab-size      : 4;
 	border-radius : 3px;
 	display       : block;
-	border        : 1px dotted;
+	border        : 1px solid #e5e5e5;
 	margin        : 5px;
-	padding       : 5px;
+	padding       : 15px;
 	font-style    : italic;
 }
 
@@ -471,7 +467,6 @@ select#mode {
 
 .message-deleted {
 	background-color : rgba(0, 0, 0, 0.1);
-	padding          : 8px;
 	margin-bottom    : 15px;
 	border-radius    : 5px;
 }
@@ -718,6 +713,10 @@ select#postcatid {
 	font-size : 32px;
 }
 
+.glyphicon-topic {
+	font-size : 28px;
+}
+
 .glyphicon-super {
 	margin-top: 20px;
 	margin-left: 5px;
@@ -800,7 +799,6 @@ div.pagination a.disabled:hover {
 	color: #999999;
 }
 
-.label,
 .badge {
 	white-space: normal;
 }
@@ -948,4 +946,13 @@ textarea {
 .category-stickymsg,
 .deleted {
 	background-color: rgba(0, 0, 0, 0.05);
+}
+
+.badger-solved {
+	border: 1px solid palegreen;
+	background-color:palegreen;
+}
+
+table .col-md-1 {
+	width: 5.6666666%;
 }
