Display catpcha for crypsis on quick reply for Joomla! 3.4+ (Part 2)

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -852,3 +852,7 @@ div.pagination a.disabled:hover {
 	background-color: rgba(0, 0, 0, 0.05);
 }
 
+form#postform div.control-group {
+    margin-left: 10px
+}
+
