CrypsisB3: Update html

--- a/components/com_kunena/site/template/crypsisb3/less/editor.less
+++ b/components/com_kunena/site/template/crypsisb3/less/editor.less
@@ -345,6 +345,9 @@ table.kpostbuttonset {
 	height            : 16px;
 	text-indent       : -10000px;
 	background-repeat : no-repeat;
+	padding           : 5px;
+	margin            : 0;
+	box-sizing        : content-box;
 }
 
 .markItUpHeader ul ul a {
@@ -374,7 +377,7 @@ table.kpostbuttonset {
 }
 
 li.markItUpButton ul {
-	z-index: 1;
+	z-index : 1;
 }
 
 .dropzone .message {
@@ -423,9 +426,5 @@ li.markItUpButton ul {
 }
 
 #kbbcode-preview {
-	height: auto !important;
-}
-
-#kshow_attach_form {
-	margin-top: -100px;
+	height : auto !important;
 }
