--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -69,6 +69,12 @@ h2 {
 	padding-left : 3px;
 }
 
+.kfrontend {
+	padding: 20px 0;
+	margin-bottom : 20px;
+	clear: both;
+}
+
 .kfrontend .section {
 	margin-bottom : 20px;
 }
@@ -956,3 +962,10 @@ textarea {
 table .col-md-1 {
 	width: 5.6666666%;
 }
+
+.form-group .pull-right .input-group-btn {
+	width: auto;
+	white-space: nowrap;
+	vertical-align: middle;
+}
+
