--- a/components/com_kunena/site/template/crypsisb3/less/profile.less
+++ b/components/com_kunena/site/template/crypsisb3/less/profile.less
@@ -7,337 +7,322 @@
 * @link http://www.kunena.org
 **/
 
-.kglyphicon glyphicon-profile {
-	width: 16px;
-	height: 16px;
-	display: inline-block;
-	vertical-align: text-top;
-	margin-right: 3px;
-	background : url("../media/iconsets/profile/default/default.png") no-repeat;
+.kicon-profile {
+	width          : 16px;
+	height         : 16px;
+	display        : inline-block;
+	vertical-align : text-top;
+	margin-right   : 3px;
+	background     : url("../media/iconsets/profile/default/default.png") no-repeat;
 }
 
-.kglyphicon glyphicon-profile-skype-off {
-	background-position: 0 -920px;
+.kicon-profile-skype-off {
+	background-position : 0 -920px;
 }
 
-.kglyphicon glyphicon-profile-myspace {
-	background-position: 0 -416px;
+.kicon-profile-myspace {
+	background-position : 0 -416px;
 }
 
-.kglyphicon glyphicon-profile-digg {
-	background-position: 0 -105px;
+.kicon-profile-digg {
+	background-position : 0 -105px;
 }
 
-.kglyphicon glyphicon-profile-birthdate {
-	background-position: 0 -42px;
+.kicon-profile-birthdate {
+	background-position : 0 -42px;
 }
 
-.kglyphicon glyphicon-profile-blogspot-off {
-	background-position: 0 -626px;
+.kicon-profile-blogspot-off {
+	background-position : 0 -626px;
 }
 
-.kglyphicon glyphicon-profile-aim-off {
-	background-position: 0 -563px;
+.kicon-profile-aim-off {
+	background-position : 0 -563px;
 }
 
-.kglyphicon glyphicon-profile-yim {
-	background-position: 0 -542px;
+.kicon-profile-yim {
+	background-position : 0 -542px;
 }
 
-.kglyphicon glyphicon-profile-twitter {
-	background-position: 0 -500px;
+.kicon-profile-twitter {
+	background-position : 0 -500px;
 }
 
-.kglyphicon glyphicon-profile-pm {
-	background-position: 0 -437px;
+.kicon-profile-pm {
+	background-position : 0 -437px;
 }
 
-.kglyphicon glyphicon-profile-msn {
-	background-position: 0 -395px;
+.kicon-profile-msn {
+	background-position : 0 -395px;
 }
 
-.kglyphicon glyphicon-profile-myspace-off {
-	background-position: 0 -857px;
+.kicon-profile-myspace-off {
+	background-position : 0 -857px;
 }
 
-.kglyphicon glyphicon-profile-friendfeed {
-	background-position: 0 -210px;
+.kicon-profile-friendfeed {
+	background-position : 0 -210px;
 }
 
-.kglyphicon glyphicon-profile-yim-off {
-	background-position: 0 -983px;
+.kicon-profile-yim-off {
+	background-position : 0 -983px;
 }
 
-.kglyphicon glyphicon-profile-pm-off {
-	background-position: 0 -878px;
+.kicon-profile-pm-off {
+	background-position : 0 -878px;
 }
 
-.kglyphicon glyphicon-profile-flickr-off {
-	background-position: 0 -710px;
+.kicon-profile-flickr-off {
+	background-position : 0 -710px;
 }
 
-.kglyphicon glyphicon-profile-digg-off {
-	background-position: 0 -668px;
+.kicon-profile-digg-off {
+	background-position : 0 -668px;
 }
 
-.kglyphicon glyphicon-profile-bebo-off {
-	background-position: 0 -584px;
+.kicon-profile-bebo-off {
+	background-position : 0 -584px;
 }
 
-.kglyphicon glyphicon-profile-website {
-	background-position: 0 -521px;
+.kicon-profile-website {
+	background-position : 0 -521px;
 }
 
-.kglyphicon glyphicon-profile-remind {
-	background-position: 0 -458px;
+.kicon-profile-remind {
+	background-position : 0 -458px;
 }
 
-.kglyphicon glyphicon-profile-gtalk {
-	background-position: 0 -252px;
+.kicon-profile-gtalk {
+	background-position : 0 -252px;
 }
 
-.kglyphicon glyphicon-profile-bebo {
-	background-position: 0 -21px;
+.kicon-profile-bebo {
+	background-position : 0 -21px;
 }
 
-.kglyphicon glyphicon-profile-linkedin-off {
-	background-position: 0 -815px;
+.kicon-profile-linkedin-off {
+	background-position : 0 -815px;
 }
 
-.kglyphicon glyphicon-profile-gender-unknown {
-	background-position: 0 -231px;
+.kicon-profile-gender-unknown {
+	background-position : 0 -231px;
 }
 
-.kglyphicon glyphicon-profile-facebook {
-	background-position: 0 -147px;
+.kicon-profile-facebook {
+	background-position : 0 -147px;
 }
 
-.kglyphicon glyphicon-profile-email {
-	background-position: 0 -126px;
+.kicon-profile-email {
+	background-position : 0 -126px;
 }
 
-.kglyphicon glyphicon-profile-delicious {
-	background-position: 0 -84px;
+.kicon-profile-delicious {
+	background-position : 0 -84px;
 }
 
-.kglyphicon glyphicon-profile-website-off {
-	background-position: 0 -962px;
+.kicon-profile-website-off {
+	background-position : 0 -962px;
 }
 
-.kglyphicon glyphicon-profile-remind-off {
-	background-position: 0 -899px;
+.kicon-profile-remind-off {
+	background-position : 0 -899px;
 }
 
-.kglyphicon glyphicon-profile-msn-off {
-	background-position: 0 -836px;
+.kicon-profile-msn-off {
+	background-position : 0 -836px;
 }
 
-.kglyphicon glyphicon-profile-icq {
-	background-position: 0 -273px;
+.kicon-profile-icq {
+	background-position : 0 -273px;
 }
 
-.kglyphicon glyphicon-profile-flickr {
-	background-position: 0 -189px;
+.kicon-profile-flickr {
+	background-position : 0 -189px;
 }
 
-.kglyphicon glyphicon-profile-friendfeed-off {
-	background-position: 0 -731px;
+.kicon-profile-friendfeed-off {
+	background-position : 0 -731px;
 }
 
-.kglyphicon glyphicon-profile-facebook-off {
-	background-position: 0 -689px;
+.kicon-profile-facebook-off {
+	background-position : 0 -689px;
 }
 
-.kglyphicon glyphicon-profile-skype {
-	background-position: 0 -479px;
+.kicon-profile-skype {
+	background-position : 0 -479px;
 }
 
-.kglyphicon glyphicon-profile-location {
-	background-position: 0 -353px;
+.kicon-profile-location {
+	background-position : 0 -353px;
 }
 
-.kglyphicon glyphicon-profile-twitter-off {
-	background-position: 0 -941px;
+.kicon-profile-twitter-off {
+	background-position : 0 -941px;
 }
 
-.kglyphicon glyphicon-profile-gtalk-off {
-	background-position: 0 -773px;
+.kicon-profile-gtalk-off {
+	background-position : 0 -773px;
 }
 
-.kglyphicon glyphicon-profile-birthday-off {
-	background-position: 0 -605px;
+.kicon-profile-birthday-off {
+	background-position : 0 -605px;
 }
 
-.kglyphicon glyphicon-profile-gender-male {
-	background-position: 0 -374px;
+.kicon-profile-gender-male {
+	background-position : 0 -374px;
 }
 
-.kglyphicon glyphicon-profile-delicious-off {
-	background-position: 0 -647px;
+.kicon-profile-delicious-off {
+	background-position : 0 -647px;
 }
 
-.kglyphicon glyphicon-profile-linkedin {
-	background-position: 0 -332px;
+.kicon-profile-linkedin {
+	background-position : 0 -332px;
 }
 
-.kglyphicon glyphicon-profile-gender-female {
-	background-position: 0 -168px;
+.kicon-profile-gender-female {
+	background-position : 0 -168px;
 }
 
-.kglyphicon glyphicon-profile-blogspot {
-	background-position: 0 -63px;
+.kicon-profile-blogspot {
+	background-position : 0 -63px;
 }
 
-.kglyphicon glyphicon-profile-icq-off {
-	background-position: 0 -794px;
+.kicon-profile-icq-off {
+	background-position : 0 -794px;
 }
 
-.kglyphicon glyphicon-profile-gender-off {
-	background-position: 0 -752px;
+.kicon-profile-gender-off {
+	background-position : 0 -752px;
 }
 
-.kglyphicon glyphicon-profile-aim {
-	background-position: 0 0;
+.kicon-profile-aim {
+	background-position : 0 0;
 }
 
-span.kglyphicon glyphicon-profile-website,
-span.kglyphicon glyphicon-profile-pm {
-	vertical-align: top;
-	margin-top: 3px;
+span.kicon-profile-website,
+span.kicon-profile-pm {
+	vertical-align : top;
+	margin-top     : 3px;
 }
 
 .kavatar {
-	max-width: 100%;
-	height: auto;
-	width: auto\9; /* ie8 */
+	max-width : 100%;
+	height    : auto;
+	width     : auto \9; /* ie8 */
 }
 
 #userdropdownlogin {
-	width: 260px;
-	left: auto;
-	right: 0;
+	width : 260px;
+	left  : auto;
+	right : 0;
 }
 
 .dropdown-menu {
-	right: 0;
-	left: auto;
-	width: 230px;
+	right : 0;
+	left  : auto;
+	width : 230px;
 	p {
-		margin-bottom: 0;
+		margin-bottom : 0;
 	}
-	#logout-form  {
-		margin: -10px 0px;
+	#logout-form {
+		margin : -10px 0;
 	}
 	#logout-form .btn-link {
 		text-decoration : none;
 		margin-left     : -10px;
 	}
 }
+
 #userdropdownlogin .btn {
-	font-weight: 700;
-	height: 36px;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	user-select: none;
-	cursor: default;
+	font-weight         : 700;
+	height              : 36px;
+	-moz-user-select    : none;
+	-webkit-user-select : none;
+	user-select         : none;
+	cursor              : default;
 }
+
 #userdropdownlogin a {
-	font-size:12px;
+	font-size : 12px;
 }
+
+#userdropdownlogin .thumbnail {
+	padding : 0 20px 20px;
+}
+
 .card {
-	background-color: #F7F7F7;
-	/* just in case there no content*/
-	padding: 20px 25px 30px;
-	margin: 0 auto 25px;
-	margin-top: 50px;
-	/* shadows and rounded borders */
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
-	-moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	-webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	background-color      : #F7F7F7;
+	padding               : 20px 25px 30px;
+	margin                : 50px auto 25px;
+	-moz-border-radius    : 2px;
+	-webkit-border-radius : 2px;
+	border-radius         : 2px;
+	-moz-box-shadow       : 0 2px 2px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow    : 0 2px 2px rgba(0, 0, 0, 0.3);
+	box-shadow            : 0 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .profile-img-card {
-	width: 96px;
-	height: 96px;
-	margin: 0 auto 10px;
-	display: block;
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	border-radius: 50%;
+	width                 : 96px;
+	height                : 96px;
+	margin                : 0 auto 10px;
+	display               : block;
+	-moz-border-radius    : 50%;
+	-webkit-border-radius : 50%;
+	border-radius         : 50%;
 }
 
 /*
  * Form styles
  */
 .profile-name-card {
-	font-size: 16px;
-	font-weight: bold;
-	text-align: center;
-	margin: 10px 0 0;
-	min-height: 1em;
+	font-size   : 16px;
+	font-weight : bold;
+	text-align  : center;
+	margin      : 10px 0 0;
+	min-height  : 1em;
 }
 
 .reauth-email {
-	display: block;
-	color: #404040;
-	line-height: 2;
-	margin-bottom: 10px;
-	font-size: 14px;
-	text-align: center;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+	display            : block;
+	color              : #404040;
+	line-height        : 2;
+	margin-bottom      : 10px;
+	font-size          : 14px;
+	text-align         : center;
+	overflow           : hidden;
+	text-overflow      : ellipsis;
+	white-space        : nowrap;
+	-moz-box-sizing    : border-box;
+	-webkit-box-sizing : border-box;
+	box-sizing         : border-box;
 }
 
 .form-signin #inputEmail,
 .form-signin #inputPassword {
-	direction: ltr;
-	height: 44px;
-	font-size: 16px;
+	direction : ltr;
+	height    : 44px;
+	font-size : 16px;
 }
 
 .form-signin input[type=email],
 .form-signin input[type=password],
 .form-signin input[type=text],
 .form-signin button {
-	width: 100%;
-	display: block;
-	margin-bottom: 10px;
-	z-index: 1;
-	position: relative;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+	width              : 100%;
+	display            : block;
+	margin-bottom      : 10px;
+	z-index            : 1;
+	position           : relative;
+	-moz-box-sizing    : border-box;
+	-webkit-box-sizing : border-box;
+	box-sizing         : border-box;
 }
 
 .form-signin .form-control:focus {
-	border-color: rgb(104, 145, 162);
-	outline: 0;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(104, 145, 162);
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(104, 145, 162);
+	border-color       : rgb(104, 145, 162);
+	outline            : 0;
+	-webkit-box-shadow : inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(104, 145, 162);
+	box-shadow         : inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(104, 145, 162);
 }
-
-.btn.btn-signin {
-	/*background-color: #4d90fe; */
-	background-color: rgb(104, 145, 162);
-	/* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
-	padding: 0px;
-	font-weight: 700;
-	font-size: 14px;
-	height: 36px;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	border: none;
-	-o-transition: all 0.218s;
-	-moz-transition: all 0.218s;
-	-webkit-transition: all 0.218s;
-	transition: all 0.218s;
-}
-
