Crypsis: Html fixes
* poll
* edit message on edit

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -769,7 +769,7 @@ div#kstats .well {
 #editavatar input[type=radio],
 #poll-vote input[type=radio],
 #search input[type=radio] {
-	display : block;
+	display : inline-block;
 }
 
 ul.inline span.kicon {
@@ -853,6 +853,14 @@ div.pagination a.disabled:hover {
 }
 
 form#postform div.control-group {
-    margin-left: 10px
+	margin-left: 10px
 }
 
+#modified_reason {
+	margin-top: -60px;
+	padding-bottom: 50px;
+}
+
+#kbbcode-poll-options .polloption {
+	padding: 5px 0;
+}
