Crypsis: Too many poll options overlap the add button #3331

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -864,3 +864,9 @@ form#postform div.control-group {
 #kbbcode-poll-options .polloption {
 	padding: 5px 0;
 }
+
+.modal-body,
+.modal {
+	overflow-y:auto;
+	max-height:90%;
+}
