--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -969,3 +969,23 @@ table .col-md-1 {
 	vertical-align: middle;
 }
 
+ul.inline > li > a > I {
+	margin-left:5px;
+	margin-right:5px;
+	font-size:16px;
+}
+
+.img-rounded {
+	border: 1px solid #ccc;
+	background-color:#fff;
+}
+
+.horizontal-message-top {
+	position: relative;
+	margin: 0;
+	padding: 0;
+	border-radius: 4px;
+	min-height: 180px;
+	border: 0;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+}
