Crypsisb3: Poll results/vote

--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -774,7 +774,7 @@ div#kstats .well {
 #editavatar input[type=radio],
 #poll-vote input[type=radio],
 #search input[type=radio] {
-	display : block;
+	display : inline-block;
 }
 
 ul.inline span.kicon {
@@ -988,4 +988,13 @@ ul.inline > li > a > I {
 	min-height: 180px;
 	border: 0;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+}
+
+#modified_reason {
+		margin-top: -60px;
+		padding-bottom: 50px;
+}
+
+#kbbcode-poll-options .polloption {
+	padding: 5px 0;
 }
