--- a/components/com_kunena/site/template/crypsisb3/less/editor.less
+++ b/components/com_kunena/site/template/crypsisb3/less/editor.less
@@ -428,3 +428,7 @@ li.markItUpButton ul {
 #kbbcode-preview {
 	height : auto !important;
 }
+
+#iconset_inject .inline:hover {
+	cursor : pointer;
+}
