--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -870,3 +870,8 @@ form#postform div.control-group {
 	overflow-y:auto;
 	max-height:90%;
 }
+
+.icon-topic {
+	font-size: 24px;
+	margin-top: 10px;
+}
