Crypsis : Moderate - It lacks the checkbox on "Move selected message and all xx messages posted after it " #3358

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -870,3 +870,8 @@ form#postform div.control-group {
 	overflow-y:auto;
 	max-height:90%;
 }
+
+#kmoderate-mode-selected,
+#kmoderate-mode-newer {
+	display: inline-block;
+}
