--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -998,3 +998,8 @@ ul.inline > li > a > I {
 #kbbcode-poll-options .polloption {
 	padding: 5px 0;
 }
+
+#kmoderate-mode-selected,
+#kmoderate-mode-newer {
+	display: inline-block;
+}
