--- a/components/com_kunena/site/template/crypsisb3/less/editor.less
+++ b/components/com_kunena/site/template/crypsisb3/less/editor.less
@@ -365,6 +365,7 @@ table.kpostbuttonset {
 
 .markItUpHeader ul {
 	margin : 0;
+	padding : 0;
 }
 
 .markItUpButton {
@@ -427,4 +428,8 @@ li.markItUpButton ul {
 
 #kbbcode-preview {
 	height : auto !important;
+}
+
+#iconset_inject .inline:hover {
+	cursor : pointer;
 }
