--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -51,7 +51,7 @@ input[type='checkbox']:focus {
 h2 {
 	padding-bottom : 2%;
 	margin-bottom  : 10px;
-	margin-top: 0px;
+	margin-top     : 0px;
 }
 
 .kgooglemap {
@@ -70,9 +70,9 @@ h2 {
 }
 
 .kfrontend {
-	padding: 20px 0;
+	padding       : 20px 0;
 	margin-bottom : 20px;
-	clear: both;
+	clear         : both;
 }
 
 .kfrontend .section {
@@ -163,34 +163,34 @@ img {
 }
 
 .topic-starter {
-	 background    : rgba(229, 229, 229, 0.4);
-	 display       : inline-block;
-	 height        : 15px;
-	 border-radius : 0 0 4px 4px;
-	 white-space   : nowrap;
-	 padding-top   : 4px;
-	 border        : 1px solid #ddd;
-	 border-top    : 0 none;
-	 padding-left  : 8px;
-	 padding-right : 8px;
-	 color          : #3a87ad;
-	 line-height    : 1em;
-	 font-size      : 10px;
-	 font-weight    : bold;
-	 text-transform : uppercase;
+	background     : rgba(229, 229, 229, 0.4);
+	display        : inline-block;
+	height         : 15px;
+	border-radius  : 0 0 4px 4px;
+	white-space    : nowrap;
+	padding-top    : 4px;
+	border         : 1px solid #ddd;
+	border-top     : 0 none;
+	padding-left   : 8px;
+	padding-right  : 8px;
+	color          : #3a87ad;
+	line-height    : 1em;
+	font-size      : 10px;
+	font-weight    : bold;
+	text-transform : uppercase;
 }
 
 .topic-moderator {
-	background    : rgba(229, 229, 229, 0.4);
-	display       : inline-block;
-	height        : 15px;
-	border-radius : 0 0 4px 4px;
-	white-space   : nowrap;
-	padding-top   : 4px;
-	border        : 1px solid #ddd;
-	border-top    : 0 none;
-	padding-left  : 8px;
-	padding-right : 8px;
+	background     : rgba(229, 229, 229, 0.4);
+	display        : inline-block;
+	height         : 15px;
+	border-radius  : 0 0 4px 4px;
+	white-space    : nowrap;
+	padding-top    : 4px;
+	border         : 1px solid #ddd;
+	border-top     : 0 none;
+	padding-left   : 8px;
+	padding-right  : 8px;
 	color          : red;
 	line-height    : 1em;
 	font-size      : 10px;
@@ -216,7 +216,10 @@ hr {
 	line-height : 20px;
 }
 
-ul li {
+.unstyled,
+.inline li,
+#kstats li,
+.profilebox li {
 	list-style : none;
 }
 
@@ -387,8 +390,9 @@ form {
 	border-radius : 5px;
 }
 
-ul, ol {
-	padding : 0;
+.profilebox {
+	padding    : 0;
+	margin-top : -5px;
 }
 
 .dl-horizontal dt {
@@ -512,10 +516,6 @@ table .well {
 	}
 }
 
-.profilebox {
-	margin-top : -5px;
-}
-
 .profile-horizontal-top {
 	padding          : 10px 5px 5px 5px;
 	border-bottom    : 1px solid #ddd;
@@ -634,7 +634,7 @@ div.kmsg > li {
 	background-color : #F2F1EE;
 }
 
-.krow1-stickymsg:nth-child(even){
+.krow1-stickymsg:nth-child(even) {
 	background-color : #FFFFFF;
 }
 
@@ -687,9 +687,11 @@ small.text-muted {
 #topic-actions {
 	padding-bottom : 10px;
 }
+
 .navbar-nav > li > .dropdown-menu {
-	margin-top: 5px;
+	margin-top : 5px;
 }
+
 #status-form label.btn a.btn {
 	padding : 0 0 0 5px;
 }
@@ -724,10 +726,10 @@ select#postcatid {
 }
 
 .glyphicon-super {
-	margin-top: 20px;
-	margin-left: 5px;
-	font-size : 48px;
-	text-align: center;
+	margin-top  : 20px;
+	margin-left : 5px;
+	font-size   : 48px;
+	text-align  : center;
 }
 
 #ktopicsform [class*='span'] {
@@ -761,7 +763,6 @@ input[type=radio]:checked + label {
 	border-radius : 4px;
 }
 
-
 input[type=radio] {
 	display : none;
 }
@@ -793,132 +794,135 @@ ul.inline i {
 [class*="category"] .glyphicon-super {
 	margin-top    : 12px;
 	padding-right : 8px;
-	padding-left: 20px;
+	padding-left  : 20px;
 }
 
 #search [class*='span'] {
-	margin-left: 6px;
+	margin-left : 6px;
 }
 
 div.pagination a.disabled,
 div.pagination a.disabled:hover {
-	color: #999999;
+	color : #999999;
 }
 
 .badge {
-	white-space: normal;
+	white-space : normal;
 }
 
 .container-fluid {
-	padding: 0;
+	padding : 0;
 }
 
 .btn .caret {
-	margin-bottom: 0 !important;
+	margin-bottom : 0 !important;
 }
 
 .knav-collapse.collapse {
-	height: auto;
+	height : auto;
 }
 
 .knav-collapse > .nav {
-	display:none
+	display : none
 }
+
 .knav-collapse.collapse.in > .nav {
-	display: inline-block;
+	display : inline-block;
 }
 
 .btn-toolbar .btn.btn-small:before,
 #search .btn.btn-small:before {
-	content: "×";
-	font-size: 14px;
+	content   : "×";
+	font-size : 14px;
 }
 
 .btn-toolbar .btn.btn-small.collapsed:before,
 #search .btn.btn-small.collapsed:before {
-	content: "";
-	font-family: "icomoon";
-	font-size: 8px;
+	content     : "";
+	font-family : "icomoon";
+	font-size   : 8px;
 }
 
 .center {
-	margin: 0px auto;
-	text-align: center;
-}
-.form-group label {
-	float: left;
-	text-align: left;
-	font-weight: normal;
-}
-.form-group select {
-	display: inline-block;
-	width: auto;
-	vertical-align: middle;
+	margin     : 0px auto;
+	text-align : center;
 }
 
+.form-group label {
+	float       : left;
+	text-align  : left;
+	font-weight : normal;
+}
+
+.form-group select {
+	display        : inline-block;
+	width          : auto;
+	vertical-align : middle;
+}
 
 .search {
-	padding: 5px 0;
-	width: 230px;
-	height: 30px;
-	position: relative;
-	float: left;
-	line-height: 22px;
+	padding     : 5px 0;
+	width       : 230px;
+	height      : 30px;
+	position    : relative;
+	float       : left;
+	line-height : 22px;
 }
 
 .search input {
-	position: absolute;
-	width: 0px;
-	float: Left;
-	margin-left: 210px;
-	-webkit-transition: all 0.7s ease-in-out;
-	-moz-transition: all 0.7s ease-in-out;
-	-o-transition: all 0.7s ease-in-out;
-	transition: all 0.7s ease-in-out;
-	height: 30px;
-	line-height: 18px;
-	padding: 0 2px 0 2px;
-	border-radius:1px;
+	position           : absolute;
+	width              : 0px;
+	float              : Left;
+	margin-left        : 210px;
+	-webkit-transition : all 0.7s ease-in-out;
+	-moz-transition    : all 0.7s ease-in-out;
+	-o-transition      : all 0.7s ease-in-out;
+	transition         : all 0.7s ease-in-out;
+	height             : 30px;
+	line-height        : 18px;
+	padding            : 0 2px 0 2px;
+	border-radius      : 1px;
 }
 
 .search:hover input, .search input:focus {
-	width: 200px;
-	margin-left: 0px;
+	width       : 200px;
+	margin-left : 0px;
 }
 
 .search .btn {
-	height: 30px;
-	position: absolute;
-	right: 0;
-	top: 5px;
-	border-radius:1px;
+	height        : 30px;
+	position      : absolute;
+	right         : 0;
+	top           : 5px;
+	border-radius : 1px;
 	i {
-		margin-top: -3px;
+		margin-top : -3px;
 	}
 }
 
 .glyphicon-white {
-	color: #FFF;
+	color : #FFF;
 }
 
 .dropdown-menu form {
-	padding: 10px;
-}
-#filter-time {
-	margin-top: 25px;
+	padding : 10px;
 }
 
-.container-fluid [class*="col"]{
-	padding-left: 0;
+#filter-time {
+	margin-top : 25px;
+}
+
+.container-fluid [class*="col"] {
+	padding-left : 0;
 }
 
 .form-control {
-	height: auto;
-	font-size: 15px;
+	height    : auto;
+	font-size : 15px;
 }
 
 i {
-	margin: 0;
+	margin : 0;
 }
 
 .mobile-user a,
@@ -928,22 +932,23 @@ i {
 .open a,
 .open a:hover,
 .open a:focus {
-	background-color: transparent;
+	background-color : transparent;
 }
 
 .legend i {
-	padding-right: 5px;
+	padding-right : 5px;
 }
 
 label.radio {
-	padding-left: 20px;
+	padding-left : 20px;
 }
 
 .navbar-nav {
-	margin: 0;
+	margin : 0;
 }
+
 textarea {
-	width: 100%;
+	width : 100%;
 }
 
 .moved,
@@ -951,16 +956,16 @@ textarea {
 .unapproved,
 .category-stickymsg,
 .deleted {
-	background-color: rgba(0, 0, 0, 0.05);
+	background-color : rgba(0, 0, 0, 0.05) !important;
 }
 
 .badger-solved {
-	border: 1px solid palegreen;
-	background-color:palegreen;
+	border           : 1px solid palegreen;
+	background-color : palegreen;
 }
 
 table .col-md-1 {
-	width: 5.6666666%;
+	width : 5.6666666%;
 }
 
 .form-group .pull-right .input-group-btn {
@@ -991,8 +996,8 @@ ul.inline > li > a > I {
 }
 
 #modified_reason {
-		margin-top: -60px;
-		padding-bottom: 50px;
+	margin-top: -60px;
+	padding-bottom: 50px;
 }
 
 #kbbcode-poll-options .polloption {
