Crypsis: unordered and ordered list not working as expected

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -209,7 +209,10 @@ hr {
 	line-height : 20px;
 }
 
-ul li {
+.unstyled,
+.inline li,
+#kstats li,
+.profilebox li {
 	list-style : none;
 }
 
@@ -384,8 +387,9 @@ form {
 	border-radius : 5px;
 }
 
-ul, ol {
+.profilebox {
 	padding : 0;
+	margin-top : -5px;
 }
 
 .dl-horizontal dt {
@@ -508,10 +512,6 @@ table .well {
 	.btn-link {
 		margin-left : -120px;
 	}
-}
-
-.profilebox {
-	margin-top : -5px;
 }
 
 .profile-horizontal-top {
