--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -364,6 +364,7 @@ table.kpostbuttonset {
 
 .markItUpHeader ul {
 	margin : 0;
+	padding : 0;
 }
 
 .markItUpButton {
@@ -430,4 +431,8 @@ li.markItUpButton ul {
 
 #kshow_attach_form {
 	margin-top: -100px;
+}
+
+#iconset_inject .inline:hover {
+	cursor : pointer;
 }
