Crypsisb3: Update html
* fixes preview.
* Add icons category item
* remove dropdown emoticons

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -880,3 +880,12 @@ form#postform div.control-group {
 #kmoderate-mode-newer {
 	display: inline-block;
 }
+
+.thumbnails li,
+.profile-expand li{
+	list-style: none;
+}
+
+.profile-expand ul {
+	padding: 0;
+}
