--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -925,16 +925,6 @@ i {
 	margin : 0;
 }
 
-.mobile-user a,
-.mobile-user a:hover,
-.mobile-user a:focus
-.open,
-.open a,
-.open a:hover,
-.open a:focus {
-	background-color : transparent;
-}
-
 .legend i {
 	padding-right : 5px;
 }
@@ -1007,4 +997,17 @@ ul.inline > li > a > I {
 #kmoderate-mode-selected,
 #kmoderate-mode-newer {
 	display: inline-block;
+}
+
+#categoryactions ul {
+	padding: 0;
+}
+
+.thumbnails li,
+.profile-expand li{
+	list-style: none;
+}
+
+.profile-expand ul {
+	padding: 0;
 }
