CrypsisB3: Update less
some small changes

--- a/components/com_kunena/site/template/crypsisb3/less/editor.less
+++ b/components/com_kunena/site/template/crypsisb3/less/editor.less
@@ -428,6 +428,7 @@ li.markItUpButton ul {
 
 #kbbcode-preview {
 	height : auto !important;
+	min-height: 240px;
 }
 
 #iconset_inject .inline:hover {
