--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -467,10 +467,6 @@ div.navbar > div > div.visible-sm.hidden-md > ul {
 	margin : 0
 }
 
-select#mode {
-	margin-left : 69px;
-}
-
 .table th, .table td {
 	line-height : 20px;
 }
@@ -715,6 +711,7 @@ small.text-muted {
 
 select#postcatid {
 	width : 100%;
+	margin-left: -10px;
 }
 
 .glyphicon-big {
@@ -1010,4 +1007,17 @@ ul.inline > li > a > I {
 
 .profile-expand ul {
 	padding: 0;
+}
+
+.solved {
+	font-size: 100%;
+	text-transform: uppercase;
+}
+
+.solved b {
+	padding-left: 10px;
+}
+
+.nav > li > a:focus {
+	background-color: transparent;
 }
