--- a/components/com_kunena/site/template/crypsisb3/less/mediaqueries.less
+++ b/components/com_kunena/site/template/crypsisb3/less/mediaqueries.less
@@ -225,6 +225,11 @@
 	}
 }
 
+@media (min-width: 768px) {
+	select#mode {
+		margin-left : 69px;
+	}
+}
 
 /* Tablets */
 @media (min-width: 768px) and (max-width: 959px) {
