CrypsisB3: Update html

--- a/components/com_kunena/site/template/crypsisb3/less/editor.less
+++ b/components/com_kunena/site/template/crypsisb3/less/editor.less
@@ -434,3 +434,8 @@ li.markItUpButton ul {
 #iconset_inject .inline:hover {
 	cursor : pointer;
 }
+
+#kauthorname {
+	width: 80.5%;
+	margin-left: 92px;
+}
