Crypsis : It lacks the topic title at the first messages #3433

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -881,6 +881,8 @@ form#postform div.control-group {
 	display: inline-block;
 }
 
+.profile-horizontal-bottom li,
+.profile-horizontal-top li,
 .thumbnails li,
 .profile-expand li{
 	list-style: none;
