Crypsis: Update css

--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -1062,3 +1062,14 @@ tfoot .form-group {
 #recent-list {
 	width: 53%;
 }
+
+.profile-horizontal-bottom li,
+.profile-horizontal-top li,
+.thumbnails li,
+.profile-expand li{
+  list-style: none;
+}
+
+.profile-expand ul {
+  padding: 0;
+}
