Article image (KunenaDiscuss) to large on forum

--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -1067,14 +1067,18 @@ tfoot .form-group {
 .profile-horizontal-top li,
 .thumbnails li,
 .profile-expand li{
-  list-style: none;
+	list-style: none;
 }
 
 .profile-expand ul {
-  padding: 0;
+	padding: 0;
 }
 
 #categoryactions ul.inline i {
-  margin:0;
-  padding:0;
+	margin:0;
+	padding:0;
+}
+
+div.kmsgtext-article > p > img {
+	max-width:100px;
 }
