[K4.0] Crypsis B3 - mobile view issues #3458

--- a/components/com_kunena/site/template/crypsisb3/less/mediaqueries.less
+++ b/components/com_kunena/site/template/crypsisb3/less/mediaqueries.less
@@ -107,7 +107,7 @@
 	}
 
 	a.dropdown-toggle,
-	i.glyphicon glyphicon-large {
+	i.glyphicon .glyphicon-large {
 		color: inherit;
 	}
 
@@ -243,12 +243,16 @@
 	}
 
 	a.dropdown-toggle,
-	i.glyphicon glyphicon-large {
+	i.glyphicon .glyphicon-large {
 		color: inherit;
 	}
 
 	ul.pull-right {
 		margin: 0;
+	}
+
+	#recent-list {
+		width: 53%;
 	}
 }
 
