--- a/components/com_kunena/site/template/crypsisb3/less/general.less
+++ b/components/com_kunena/site/template/crypsisb3/less/general.less
@@ -841,7 +841,7 @@ div.pagination a.disabled:hover {
 }
 
 .center {
-	margin     : 0px auto;
+	margin     : 0 auto;
 	text-align : center;
 }
 
@@ -868,7 +868,7 @@ div.pagination a.disabled:hover {
 
 .search input {
 	position           : absolute;
-	width              : 0px;
+	width              : 0;
 	float              : Left;
 	margin-left        : 210px;
 	-webkit-transition : all 0.7s ease-in-out;
@@ -883,7 +883,7 @@ div.pagination a.disabled:hover {
 
 .search:hover input, .search input:focus {
 	width       : 200px;
-	margin-left : 0px;
+	margin-left : 0;
 }
 
 .search .btn {
@@ -1044,7 +1044,7 @@ ul.inline > li > a > I {
 	border: 1px solid #cccccc;
 	border-radius: 4px;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-	box-shadow: inset 0px 1px 1px rgba(0,0,0,0.075);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 	-webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
 	-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
@@ -1057,10 +1057,6 @@ tfoot .form-group {
 [id*="category"] ul.inline,
 .pagination-small {
 	padding: 0;
-}
-
-#recent-list {
-	width: 53%;
 }
 
 .profile-horizontal-bottom li,
