--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -285,6 +285,7 @@ table.kpostbuttonset {
 	list-style : none;
 	float      : left;
 	position   : relative;
+	box-sizing : content-box;
 }
 
 .markItUpHeader ul li:hover > ul {
