--- a/components/com_kunena/admin/media/css/cpanel.css
+++ b/components/com_kunena/admin/media/css/cpanel.css
@@ -7,27 +7,11 @@
  * @link http://www.kunena.org
  **/
 
-@CHARSET "UTF-8";
-
-.kadmin-welcome {
-	clear:both;
-	margin:10px 0;
-	padding:10px;
-	font-size:12px;
-	color:#536482;
-	line-height:140%;
-	border:1px solid #ddd;
-	margin-bottom: 25px;
-}
 .kadmin-welcome h3 {
 	margin: 0;
 	padding: 0;
 }
-table.thisform {
-	width: 100%;
-	padding: 10px;
-	border-collapse: collapse;
-}
+
 table.thisform tr.row0 {
 	background-color: #F7F8F9;
 }
@@ -38,15 +22,11 @@ table.thisform th {
 	font-size: 15px;
 	font-weight: normal;
 	font-variant: small-caps;
-	padding-top: 6px;
-	padding-bottom: 2px;
-	padding-left: 4px;
-	padding-right: 4px;
+	padding: 6px 4px 2px;
 	text-align: left;
 	height: 25px;
 	color: #666666;
-	background: url(../images/background.gif);
-	background-repeat: repeat;
+	background: url(../images/background.gif) repeat;
 }
 table.thisform td {
 	padding: 3px;
