--- a/components/com_kunena/admin/media/css/admin.css
+++ b/components/com_kunena/admin/media/css/admin.css
@@ -7,8 +7,6 @@
  * @link http://www.kunena.org
  **/
 
-@CHARSET "UTF-8";
-
 /** Joomla 1.6 backend fix **/
 DIV#element-box,
 DIV.m {
@@ -29,41 +27,8 @@ div.pagetitle {
 
 /** end Joomla 1.6 backend fix **/
 
-div.icon-48-kunena {
-	background-image: url(../icons/kunena-logo-48-white.png);
-}
-
-.hideable {
-	position: relative;
-	visibility: hidden;
-}
-
 #submenu-box {
 	display: none !important;
-}
-
-#kadmin {
-	text-align: left;
-	width: 100%;
-	min-height: 500px;
-}
-
-#kadmin-header {
-	clear: both;
-	width: 100%;
-	margin-bottom: 15px;
-}
-
-.kadmin-container {
-	width: 100%;
-}
-
-.kadmin-left {
-	width: 190px;
-	float: left;
-	border-right: 1px solid #ccc;
-	margin-right: 20px;
-	position: absolute;
 }
 
 #kadmin table {
@@ -81,81 +46,6 @@ table.kadmin-adminform td {
 }
 
 /* Small icons  */
-a.icon-cp-sm {
-	background: url(../icons/small/kunena-logo-20-white.png) 5px 5px no-repeat;
-}
-
-a.icon-config-sm {
-	background: url(../icons/small/config.png) 5px 5px no-repeat;
-}
-
-a.icon-adminforum-sm {
-	background: url(../icons/small/categories.png) 5px 5px no-repeat;
-}
-
-a.icon-profiles-sm {
-	background: url(../icons/small/users.png) 5px 5px no-repeat;
-}
-
-a.icon-template-sm {
-	background: url(../icons/small/templates.png) 5px 5px no-repeat;
-}
-
-a.icon-smilies-sm {
-	background: url(../icons/small/smileys.png) 5px 5px no-repeat;
-}
-
-a.icon-ranks-sm {
-	background: url(../icons/small/ranks.png) 5px 5px no-repeat;
-}
-
-a.icon-topicicons-sm {
-	background: url(../icons/small/topicicons.png) 5px 5px no-repeat;
-}
-
-a.icon-files-sm {
-	background: url(../icons/small/files.png) 5px 5px no-repeat;
-}
-
-a.icon-images-sm {
-	background: url(../icons/small/images.png) 5px 5px no-repeat;
-}
-
-a.icon-prune-sm {
-	background: url(../icons/small/prune.png) 5px 5px no-repeat;
-}
-
-a.icon-syncusers-sm {
-	background: url(../icons/small/syncusers.png) 5px 5px no-repeat;
-}
-
-a.icon-recount-sm {
-	background: url(../icons/small/recount.png) 5px 5px no-repeat;
-}
-
-a.icon-trash-sm {
-	background: url(../icons/small/trash.png) 5px 5px no-repeat;
-}
-
-a.icon-stats-sm {
-	background: url(../icons/small/stats.png) 5px 5px no-repeat;
-}
-
-a.icon-systemreport-sm {
-	background: url(../icons/small/report.png) 5px 5px no-repeat;
-}
-
-a.icon-support-sm {
-	background: url(../icons/small/support.png) 5px 5px no-repeat;
-}
-
-a.icon-editcss-sm {
-	background: url(../icons/small/css.png) 5px 5px no-repeat;
-}
-
-a.icon-pluginsmanager-sm {
-	background: url(../icons/small/pluginsmanager.png) 5px 5px no-repeat;
-}
 
 /* Large icons */
 div.kadmin-functitle.icon-cpanel {
@@ -164,10 +54,6 @@ div.kadmin-functitle.icon-cpanel {
 
 div.kadmin-functitle.icon-config {
 	background: url(../icons/large/config.png) 5px 5px no-repeat;
-}
-
-div.kadmin-functitle.icon-adminforum {
-	background: url(../icons/large/categories.png) 5px 5px no-repeat;
 }
 
 div.kadmin-functitle.icon-profiles {
@@ -218,10 +104,6 @@ div.kadmin-functitle.icon-stats {
 	background: url(../icons/large/stats.png) 5px 5px no-repeat;
 }
 
-div.kadmin-functitle.icon-systemreport {
-	background: url(../icons/large/report.png) 5px 5px no-repeat;
-}
-
 div.kadmin-functitle.icon-support {
 	background: url(../icons/large/support.png) 5px 5px no-repeat;
 }
@@ -259,10 +141,6 @@ form.adminform {
 	margin-top: 10px !important;
 }
 
-#kadmin-menu {
-	border-top: 1px solid #ccc;
-}
-
 #kadmin-menu a {
 	display: block;
 	font-size: 11px;
@@ -271,34 +149,6 @@ form.adminform {
 	height: 25px;
 	line-height: 25px;
 	text-indent: 30px;
-}
-
-.kadmin-mainmenu {
-	background: #FBFBFB;
-	padding: 3px;
-}
-
-.kadmin-activemenu {
-	background: #fff;
-	padding: 5px;
-}
-
-.kadmin-submenu {
-	background: #fff;
-	padding: 5px 5px 5px 15px;
-}
-
-.kadmin-right {
-	background: #fff;
-	padding: 5px 5px 5px 220px;
-}
-
-.kadmin-footer {
-	clear: both;
-	font-size: 10px;
-	text-align: right;
-	padding: 5px;
-	background: #FBFBFB;
 }
 
 .kadmin-functitle {
@@ -314,16 +164,6 @@ form.adminform {
 	text-indent: 60px;
 }
 
-.kadmin-funcsubtitle {
-	font-size: 14px;
-	text-align: left;
-	padding: 5px;
-	border-bottom: 3px solid #7F9DB9;
-	font-weight: bold;
-	color: #7F9DB9;
-	margin: 10px 0 10px 0;
-}
-
 .krow0 td {
 	padding: 8px 5px;
 	text-align: left;
@@ -334,12 +174,6 @@ form.adminform {
 	padding: 8px 5px;
 	text-align: left;
 	border-bottom: 1px dotted #ccc;
-}
-
-td.kadmin-tdtitle {
-	font-weight: bold;
-	padding-left: 10px;
-	color: #666;
 }
 
 #kcongifcover fieldset {
@@ -354,24 +188,12 @@ table.kadmin-sort td {
 	height: 35px;
 }
 
-td.kadmin-paging {
-	margin: 0 auto;
-	background: #F3F3F3 !important;
-}
-
-select#kforums {
-	width: 200px;
-}
-
 div.tpl-thumbnail img {
 	float: left;
 	margin-bottom: 10px;
 	border: 4px solid #ccc;
-	padding: 2px max-width: 300 px;
-}
-
-div.tpl-desc {
-	clear: left;
+	padding: 2px;
+	max-width: 300px;
 }
 
 input.ksm-field {
@@ -425,14 +247,6 @@ table.kadmin-stat .col1 {
 
 table.kadmin-stat .col2 {
 	background-color: #FBFBFB;
-}
-
-span.kwriteable {
-	color: green;
-}
-
-span.kunwriteable {
-	color: red;
 }
 
 /* standard form style table */
