--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -171,6 +171,16 @@ table.kpostbuttonset {
 	background-image : url(images/tweet.png);
 }
 
+.markItUp .soundcloudbutton a {
+	background-image : url(images/soundcloud.png);
+	margin-left: -3px;
+	margin-top: 3px;
+}
+
+.markItUp .instagrambutton a {
+	background-image : url(images/instagram.png);
+}
+
 .markItUp .hrbutton a {
 	background-image : url(images/hr.png);
 }
