--- a/components/com_kunena/site/template/crypsisb3/less/editor.less
+++ b/components/com_kunena/site/template/crypsisb3/less/editor.less
@@ -183,6 +183,16 @@ table.kpostbuttonset {
 	background-image : url(images/clean.png);
 }
 
+.markItUp .soundcloudbutton a {
+	background-image : url(images/soundcloud.png);
+	margin-left: -3px;
+	margin-top: 3px;
+}
+
+.markItUp .instagrambutton a {
+	background-image : url(images/instagram.png);
+}
+
 .markItUp .colors ul {
 	width   : auto;
 	padding : 1px;
