--- a/components/com_kunena/site/template/crypsisb3/less/profile.less
+++ b/components/com_kunena/site/template/crypsisb3/less/profile.less
@@ -8,321 +8,145 @@
 **/
 
 .kicon-profile {
-	width          : 16px;
-	height         : 16px;
-	display        : inline-block;
-	vertical-align : text-top;
-	margin-right   : 3px;
-	background     : url("../media/iconsets/profile/default/default.png") no-repeat;
-}
-
-.kicon-profile-skype-off {
-	background-position : 0 -920px;
+	width: 32px;
+	height: 32px;
+	display: inline-block;
+	vertical-align: text-top;
+	margin-right: 3px;
 }
 
 .kicon-profile-myspace {
-	background-position : 0 -416px;
+	background : url("images/social/myspace.png") 50% 50%;
 }
 
 .kicon-profile-digg {
-	background-position : 0 -105px;
+	background : url("images/social/digg.png") 50% 50%;
 }
 
 .kicon-profile-birthdate {
-	background-position : 0 -42px;
-}
-
-.kicon-profile-blogspot-off {
-	background-position : 0 -626px;
-}
-
-.kicon-profile-aim-off {
-	background-position : 0 -563px;
-}
-
-.kicon-profile-yim {
-	background-position : 0 -542px;
+	background-position: 0 -42px;
 }
 
 .kicon-profile-twitter {
-	background-position : 0 -500px;
+	background : url("images/social/twitter.png") 50% 50%;
 }
 
 .kicon-profile-pm {
-	background-position : 0 -437px;
+	background-position: 0 -437px;
 }
 
-.kicon-profile-msn {
-	background-position : 0 -395px;
-}
-
-.kicon-profile-myspace-off {
-	background-position : 0 -857px;
+.kicon-profile-microsoft {
+	background : url("images/social/microsoft.png") 50% 50%;
 }
 
 .kicon-profile-friendfeed {
-	background-position : 0 -210px;
-}
-
-.kicon-profile-yim-off {
-	background-position : 0 -983px;
-}
-
-.kicon-profile-pm-off {
-	background-position : 0 -878px;
-}
-
-.kicon-profile-flickr-off {
-	background-position : 0 -710px;
-}
-
-.kicon-profile-digg-off {
-	background-position : 0 -668px;
-}
-
-.kicon-profile-bebo-off {
-	background-position : 0 -584px;
+	background : url("images/social/friendfeed.png") 50% 50%;
 }
 
 .kicon-profile-website {
-	background-position : 0 -521px;
+	background-position: 0 -521px;
 }
 
 .kicon-profile-remind {
-	background-position : 0 -458px;
+	background-position: 0 -458px;
 }
 
-.kicon-profile-gtalk {
-	background-position : 0 -252px;
-}
-
-.kicon-profile-bebo {
-	background-position : 0 -21px;
-}
-
-.kicon-profile-linkedin-off {
-	background-position : 0 -815px;
+.kicon-profile-google {
+	background : url("images/social/google.png") 50% 50%;
 }
 
 .kicon-profile-gender-unknown {
-	background-position : 0 -231px;
+	background-position: 0 -231px;
 }
 
 .kicon-profile-facebook {
-	background-position : 0 -147px;
+	background : url("images/social/facebook.png") 50% 50%;
 }
 
 .kicon-profile-email {
-	background-position : 0 -126px;
+	background-position: 0 -126px;
 }
 
 .kicon-profile-delicious {
-	background-position : 0 -84px;
-}
-
-.kicon-profile-website-off {
-	background-position : 0 -962px;
-}
-
-.kicon-profile-remind-off {
-	background-position : 0 -899px;
-}
-
-.kicon-profile-msn-off {
-	background-position : 0 -836px;
+	background : url("images/social/delicious.png") 50% 50%;
 }
 
 .kicon-profile-icq {
-	background-position : 0 -273px;
+	background : url("images/social/icq.png") 50% 50%;
 }
 
 .kicon-profile-flickr {
-	background-position : 0 -189px;
-}
-
-.kicon-profile-friendfeed-off {
-	background-position : 0 -731px;
-}
-
-.kicon-profile-facebook-off {
-	background-position : 0 -689px;
+	background : url("images/social/flickr.png") 50% 50%;
 }
 
 .kicon-profile-skype {
-	background-position : 0 -479px;
+	background : url("images/social/skype.png") 50% 50%;
 }
 
 .kicon-profile-location {
-	background-position : 0 -353px;
-}
-
-.kicon-profile-twitter-off {
-	background-position : 0 -941px;
-}
-
-.kicon-profile-gtalk-off {
-	background-position : 0 -773px;
-}
-
-.kicon-profile-birthday-off {
-	background-position : 0 -605px;
+	background-position: 0 -353px;
 }
 
 .kicon-profile-gender-male {
-	background-position : 0 -374px;
-}
-
-.kicon-profile-delicious-off {
-	background-position : 0 -647px;
+	background-position: 0 -374px;
 }
 
 .kicon-profile-linkedin {
-	background-position : 0 -332px;
+	background : url("images/social/linkedin.png") 50% 50%;
 }
 
 .kicon-profile-gender-female {
-	background-position : 0 -168px;
+	background-position: 0 -168px;
 }
 
 .kicon-profile-blogspot {
-	background-position : 0 -63px;
-}
-
-.kicon-profile-icq-off {
-	background-position : 0 -794px;
-}
-
-.kicon-profile-gender-off {
-	background-position : 0 -752px;
+	background : url("images/social/blogger.png") 50% 50%;
 }
 
 .kicon-profile-aim {
-	background-position : 0 0;
+	background : url("images/social/aim.png") 50% 50%;
+}
+
+.kicon-profile-apple {
+	background : url("images/social/apple.png") 50% 50%;
+}
+
+.kicon-profile-qq {
+	background : url("images/social/qq.png") 50% 50%;
+}
+
+.kicon-profile-qzone {
+	background : url("images/social/qzone.png") 50% 50%;
+}
+
+.kicon-profile-instagram {
+	background : url("images/social/instagram.png") 50% 50%;
+}
+
+.kicon-profile-weibo {
+	background : url("images/social/weibo.png") 50% 50%;
+}
+
+.kicon-profile-wechat {
+	background : url("images/social/wechat.png") 50% 50%;
+}
+
+.kicon-profile-vk {
+	background : url("images/social/vk.png") 50% 50%;
+}
+
+.kicon-profile-telegram {
+	background : url("images/social/telegram.png") 50% 50%;
 }
 
 span.kicon-profile-website,
 span.kicon-profile-pm {
-	vertical-align : top;
-	margin-top     : 3px;
+	vertical-align: top;
+	margin-top: 3px;
 }
 
 .kavatar {
-	max-width : 100%;
-	height    : auto;
-	width     : auto \9; /* ie8 */
-}
-
-#userdropdownlogin {
-	width : 260px;
-	left  : auto;
-	right : 0;
-}
-
-.dropdown-menu {
-	right : 0;
-	left  : auto;
-	width : 230px;
-	p {
-		margin-bottom : 0;
-	}
-	#logout-form {
-		margin : -10px 0;
-	}
-	#logout-form .btn-link {
-		text-decoration : none;
-		margin-left     : -10px;
-	}
-}
-
-#userdropdownlogin .btn {
-	font-weight         : 700;
-	height              : 36px;
-	-moz-user-select    : none;
-	-webkit-user-select : none;
-	user-select         : none;
-	cursor              : default;
-}
-
-#userdropdownlogin a {
-	font-size : 12px;
-}
-
-#userdropdownlogin .thumbnail {
-	padding : 0 20px 20px;
-}
-
-.card {
-	background-color      : #F7F7F7;
-	padding               : 20px 25px 30px;
-	margin                : 50px auto 25px;
-	-moz-border-radius    : 2px;
-	-webkit-border-radius : 2px;
-	border-radius         : 2px;
-	-moz-box-shadow       : 0 2px 2px rgba(0, 0, 0, 0.3);
-	-webkit-box-shadow    : 0 2px 2px rgba(0, 0, 0, 0.3);
-	box-shadow            : 0 2px 2px rgba(0, 0, 0, 0.3);
-}
-
-.profile-img-card {
-	width                 : 96px;
-	height                : 96px;
-	margin                : 0 auto 10px;
-	display               : block;
-	-moz-border-radius    : 50%;
-	-webkit-border-radius : 50%;
-	border-radius         : 50%;
-}
-
-/*
- * Form styles
- */
-.profile-name-card {
-	font-size   : 16px;
-	font-weight : bold;
-	text-align  : center;
-	margin      : 10px 0 0;
-	min-height  : 1em;
-}
-
-.reauth-email {
-	display            : block;
-	color              : #404040;
-	line-height        : 2;
-	margin-bottom      : 10px;
-	font-size          : 14px;
-	text-align         : center;
-	overflow           : hidden;
-	text-overflow      : ellipsis;
-	white-space        : nowrap;
-	-moz-box-sizing    : border-box;
-	-webkit-box-sizing : border-box;
-	box-sizing         : border-box;
-}
-
-.form-signin #inputEmail,
-.form-signin #inputPassword {
-	direction : ltr;
-	height    : 44px;
-	font-size : 16px;
-}
-
-.form-signin input[type=email],
-.form-signin input[type=password],
-.form-signin input[type=text],
-.form-signin button {
-	width              : 100%;
-	display            : block;
-	margin-bottom      : 10px;
-	z-index            : 1;
-	position           : relative;
-	-moz-box-sizing    : border-box;
-	-webkit-box-sizing : border-box;
-	box-sizing         : border-box;
-}
-
-.form-signin .form-control:focus {
-	border-color       : rgb(104, 145, 162);
-	outline            : 0;
-	-webkit-box-shadow : inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(104, 145, 162);
-	box-shadow         : inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(104, 145, 162);
+	max-width: 100%;
+	height: auto;
+	width: auto\9; /* ie8 */
 }
