--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -895,3 +895,52 @@ form#postform div.control-group {
 div.kmsgtext-article > p > img {
 	max-width:100px;
 }
+
+div.krating:not(:checked) > input {
+	position:absolute;
+	top:-9999px;
+	clip:rect(0,0,0,0);
+}
+
+div.krating:not(:checked) > label {
+	float:right;
+	width:1em;
+	padding:0 .1em;
+	overflow:hidden;
+	white-space:nowrap;
+	cursor:pointer;
+	font-size:200%;
+	line-height:1.2;
+	color:#ddd;
+	text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+div.krating:not(:checked) > label:before {
+	content: '★ ';
+}
+
+div.krating > input:checked ~ label {
+	color: #f70;
+	text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+div.krating:not(:checked) > label:hover,
+div.krating:not(:checked) > label:hover ~ label {
+	color: gold;
+	text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+div.krating > input:checked + label:hover,
+div.krating > input:checked + label:hover ~ label,
+div.krating > input:checked ~ label:hover,
+div.krating > input:checked ~ label:hover ~ label,
+div.krating > label:hover ~ input:checked ~ label {
+	color: #ea0;
+	text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+div.krating > label:active {
+	position:relative;
+	top:2px;
+	left:2px;
+}
