--- a/src/components/com_kunena/template/crypsis/less/twitter.less
+++ b/src/components/com_kunena/template/crypsis/less/twitter.less
@@ -323,8 +323,7 @@ a:hover .ic-mask, a:focus .ic-mask {
 }
 
 .ic-twitter-badge {
-	border        : 1px solid #fff;
-	border-color  : transparent;
+	border: 1px solid transparent;
 	border-radius : 3px
 }
 
@@ -432,8 +431,7 @@ button.load-more:hover, button.load-more:focus {
 	background-color : rgba(0, 0, 0, 0.15);
 	background-image : -webkit-linear-gradient(#fff, #ddd);
 	background-image : linear-gradient(#fff, #ddd);
-	border           : 1px solid #ccc;
-	border-color     : rgba(0, 0, 0, 0.2);
+	border           : 1px solid rgba(0, 0, 0, 0.2);
 	border-radius    : 4px
 }
 
@@ -957,8 +955,7 @@ a.tweet-box-button {
 	padding             : 8px 8px 4px 8px;
 	margin              : -8px -8px 8px -8px;
 	background          : #f6f6f6;
-	border-bottom       : 1px solid #e8e8e8;
-	border-bottom-color : rgba(0, 0, 0, 0.1)
+	border-bottom       : 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .standalone-tweet .reply {
