--- a/src/components/com_kunena/template/crypsisb3/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/less/general.less
@@ -51,7 +51,7 @@ input[type='checkbox']:focus {
 h2 {
 	padding-bottom : 2%;
 	margin-bottom  : 10px;
-	margin-top     : 0px;
+	margin-top     : 0;
 }
 
 .kgooglemap {
@@ -1039,8 +1039,7 @@ ul.inline > li > a > I {
 	font-size: 14px;
 	line-height: 1.4285;
 	color: #555555;
-	background-color: #ffffff;
-	background-image: none;
+	background: #ffffff none;
 	border: 1px solid #cccccc;
 	border-radius: 4px;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
