Crypsisb3: small improvements

--- a/src/components/com_kunena/template/crypsisb3/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/less/general.less
@@ -1077,3 +1077,11 @@ tfoot .form-group {
 div.kmsgtext-article > p > img {
 	max-width:100px;
 }
+
+div.moderators {
+	clear: both;
+}
+
+.pagination .pagination-small ul {
+	padding: 0;
+}
