--- a/src/components/com_kunena/template/crypsisb3/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/less/general.less
@@ -947,8 +947,8 @@ textarea {
 }
 
 .badger-solved {
-	border           : 1px solid palegreen;
-	background-color : palegreen;
+	border: 1px solid #5cb85c;
+	background-color : honeydew;
 }
 
 table .col-md-1 {
@@ -1082,6 +1082,6 @@ div.moderators {
 	clear: both;
 }
 
-.pagination .pagination-small ul {
+.pagination-small ul {
 	padding: 0;
 }
