Implement 5 star Rating in Crypsis #981 (Part 2)

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -940,7 +940,7 @@ div.krating > label:hover ~ input:checked ~ label {
 }
 
 div.krating > label:active {
-+	position:relative;
-+	top:2px;
-+	left:2px;
-+}
+	position:relative;
+	top:2px;
+	left:2px;
+}
